# void_engine

./: CMakeLists.txt
include/: mesh.h  model.h  shader.h
include/model/: animation.h  animator.h  bone.h  mesh.h  model.h
sandbox/: CMakeLists.txt  perlin_noise.cpp  shader.frag  shader.vert
src/: main.cpp
src/camera/: camera.h
src/engine/noise/: PerlinNoise.cpp  PerlinNoise.h
src/entities/: grass.cpp  grass.h
src/renderer/text/: TextBlitter.cpp  TextBlitter.h  text.frag  text.vert
src/shaders/: color.frag  color.vert  light.frag  light.vert  model.vert  shader.frag  shader.vert
src/shaders/grass/: grass.frag  grass.vert
src/shaders/model/: animation.vert
src/shaders/outline_shader/: outline.frag  outline.vert
src/shaders/transform/: transform.frag  transform.vert
src/shaders/transparent/: transparent.frag  trasparent.vert
